# fuckaround-sever

./: Cargo.toml  config.example.toml  rustfmt.toml  tmp.sql  underground_2026-04-12T19_47_22.151Z.json
migrations/: 20260412234708_initial_database_tables.sql
src/: app.rs  config.rs  db.rs  emailer.rs  errors.rs  main.rs  models.rs
src/routers/: mod.rs
