[package]
name = "fuckaround-sever"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = "0.25"
capnp-rpc = "0.25.0"
tokio = { version = "1.49.0", features = [
    "io-std",
    "macros",
    "rt",
    "net",
    "sync",
    "rt-multi-thread",
    "io-util",
    "process",
] }
futures = "0.3.31"
tokio-util = { version = "0.7.18", features = ["compat"] }
tokio-rustls = { version = "0.26.4", features = ["ring"] }
openssl = { version = "0.10.73", features = ["vendored"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
ferroid = { version = "1.0.1", features = [
    "ulid",
    "thread-local",
    "base32",
    "async-tokio",
    "lock",
] }
whoami = "2.1.0"
bitflags = { version = "2.10.0", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "migrate",
    "json",
    "postgres",
    "ipnetwork",
    "mac_address",
    "chrono",
    "macros",
    "runtime-tokio-native-tls",
    "tls-rustls-ring-native-roots",
] }
serde_json = "1.0.140"
chrono = { version = "0.4.38", features = ["serde"] }
redis = { version = "1.0.3", features = [
    "tokio-rustls-comp",
    "tls-rustls",
    "tokio-comp",
    "connection-manager",
    "aio",
] }
convert_case = "0.11.0"
lettre = { version = "0.11.15", features = [
    "serde",
    "sendmail-transport",
    "builder",
    "smtp-transport",
    "tracing",
    "tokio1-native-tls",
], default-features = false }
walkdir = "2.5.0"
rand = { version = "0.10.0", features = ["sys_rng"] }
getrandom = { version = "0.4.1", features = ["sys_rng"] }
webauthn-rs = { version = "0.5.2", features = [
    "danger-allow-state-serialisation",
] }
hyper = "*"
hyper-util = "*"
tower = "*"
axum = { version = "0.8.1", features = [
    "json",
    "query",
    "tokio",
    "http2",
    "multipart",
    "ws",
    "macros",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
ring = "0.17.14"
handlebars = "6.2.0"
reqwest = { version = "0.13.1", features = ["json", "deflate", "blocking"] }
anyhow = "1.0.100"
axum-client-ip = { version = "1.3.1", default-features = false }
tower-http = { version = "0.6.8", features = ["trace", "fs", "cors"] }
serde_yaml = "0.9.33"
ciborium = "0.2.2"
sha2 = "0.10.9"
hex = "*"
regex = "1.12.3"
axum-extra = { version = "0.10.1", features = ["cookie", "query"] }
base64 = "0.22.1"
time = "0.3.9"
ssh-key = { version = "0.6.7", features = ["rsa", "serde"] }
git2 = "*"
async-nats = "0.46.0"